# C-Edge-AI-Inference-Engine

./: CMakeLists.txt  README.md
include/: benchmark.h  image_preprocessor.h  model_runner.h
results/: benchmark_results.md
src/: benchmark.cpp  image_preprocessor.cpp  main.cpp  model_runner.cpp  utils.cpp
